popup.css
.large_control {
  width: 2em;
  height: 2em;
}

.small_control {
  width: 1.5em;
  height: 1.5em;
}

.control_table {
  width: 100%;
}

#song_info {
  padding-bottom: 0.25em;
}

#song_info_spot {
  padding-left: 0.25em;
}

.song_text {
  white-space: nowrap;
  overflow: hidden;
}

body {
  max-width: 30em;
  min-width: 20em;
  max-height: 15em;
  overflow-x: hidden;
  padding: 0.5em;
}

.album_art {
  -moz-border-radius: 0.25em;
  -webkit-border-radius: 0.25em;
  border-radius: 0.25em;

  vertical-align: middle;
  min-width: 75px;
  width: 75px;
  min-height: 75px;
  height: 75px;
}

